--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,10 +5,10 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  camera: ^0.8.0-0
+  camera:
   flutter:
     sdk: flutter
   pedantic:
