Use flutter sdk

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,9 +16,9 @@ jobs:
 #      #In travis/docker we need the --no-sandbox flag in chrome
 #      CHROME_FORCE_NO_SANDBOX: true
     steps:
-      - uses: dart-lang/setup-dart@v0.3
+      - uses: subosito/flutter-action@v1
         with:
-          sdk: ${{ matrix.sdk }}
+          channel: ${{ matrix.sdk }}
       - uses: actions/checkout@v2
       - run: dart --version
       - run: dart pub get
