--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: dart --version
       - run: dart pub get
+      - run: dart pub get
+        working-directory: 'example'
       - run: dart analyze --fatal-infos --fatal-warnings .
       - run: dart test
       - run: dart tool/prepare_submit.dart
