--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: dart --version
       - run: dart pub get
-      - run: dart pub get
+      - run: flutter pub get
         working-directory: 'example'
       - run: dart analyze --fatal-infos --fatal-warnings .
       - run: dart test
