--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        sdk: ['beta']
+        sdk: ['stable']
     runs-on: ${{ matrix.os }}
 #    env:
 #      #In travis/docker we need the --no-sandbox flag in chrome
@@ -22,9 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: dart --version
       - run: dart pub get
-      - run: flutter pub get
-        working-directory: 'example'
-      - run: dart analyze --fatal-infos --fatal-warnings .
+      - run: dart analyze --fatal-infos .
       - run: dart test
       - run: dart tool/prepare_submit.dart
       - name: "check for uncommitted changes"
