--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,13 +12,10 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         sdk: ['stable']
     runs-on: ${{ matrix.os }}
-#    env:
-#      #In travis/docker we need the --no-sandbox flag in chrome
-#      CHROME_FORCE_NO_SANDBOX: true
     steps:
-      - uses: subosito/flutter-action@v1
+      - uses: dart-lang/setup-dart@v1
         with:
-          channel: ${{ matrix.sdk }}
+          sdk: ${{ matrix.sdk }}
       - uses: actions/checkout@v2
       - run: dart --version
       - run: dart pub get
