--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: zxing2
 description: A multi-format 1D/2D barcode image processing library implemented in Dart. This is a port of the Android library.
-version: 0.2.0
+version: 0.2.1
 homepage: https://github.com/xvrh/zxing-dart
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: "^3.0.0"
 
 dependencies:
   charcode: ^1.2.0
@@ -13,11 +13,14 @@ dependencies:
   meta: ^1.3.0
 
 dev_dependencies:
-  analyzer:
   dart_style:
   image:
   lints:
   path:
+  project_tools:
+    git:
+      url: https://github.com/xvrh/project_tools.dart.git
+      ref: '76d200c'
   pub_semver:
   test:
   yaml:
