--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,4 +6,6 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
 jobs:
   publish:
+    permissions:
+      id-token: write # Required for authentication using OIDC
     uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
