--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -14,7 +14,7 @@ jobs:
           sdk: 'stable'
       - uses: actions/checkout@v4
       - run: dart pub get
-      - run: dart test
+      - run: dart test --coverage=coverage
       - name: Install coverage tools
         run: dart pub global activate coverage
       - name: format coverage
